<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CadRoupaFragment">

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:backgroundTint="@android:color/transparent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_arrow_back_24"
        app:tint="@color/green" />

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_close_clear_cancel"
        app:tint="@color/green" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="253dp"
        android:layout_height="62dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="96dp"
        android:fontFamily="@font/playfair_display_semibold"
        android:text="@string/app_name"
        android:textColor="@color/green"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="105dp"
        android:layout_height="99dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="28dp"
        android:background="@drawable/bg_image_rounded"
        android:contentDescription="@string/app_photo"
        android:padding="8dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/casaco" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="66dp"
        android:layout_height="33dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="176dp"
        android:fontFamily="@font/playfair_display_semibold"
        android:text="@string/app_cor"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="220dp"
        android:layout_marginEnd="52dp"
        android:orientation="horizontal"
        android:padding="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!-- Círculo cinza -->
        <View
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_margin="4dp"
            android:background="@drawable/circle_gray" />

        <!-- Círculo preto -->
        <View
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_margin="4dp"
            android:background="@drawable/circle_black" />

        <!-- Círculo azul -->
        <View
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_margin="4dp"
            android:background="@drawable/circle_blue" />

        <!-- Círculo vermelho -->
        <View
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_margin="4dp"
            android:background="@drawable/circle_red" />

        <!-- Círculo verde -->
        <View
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_margin="4dp"
            android:background="@drawable/circle_green" />

        <!-- Círculo amarelo -->
        <View
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_margin="4dp"
            android:background="@drawable/circle_yellow" />

        <!-- Círculo roxo -->
        <View
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_margin="4dp"
            android:background="@drawable/circle_purple" />

        <!-- Círculo arco-íris (gradiente) -->
        <View
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_margin="4dp"
            android:background="@drawable/rainbow" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="96dp"
        android:layout_height="33dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="300dp"
        android:fontFamily="@font/playfair_display_semibold"
        android:text="@string/app_categoria"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="81dp"
        android:layout_height="43dp"
        android:layout_marginBottom="344dp"
        android:text="Button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button3"
        android:layout_width="81dp"
        android:layout_height="43dp"
        android:layout_marginBottom="344dp"
        android:text="Button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button4"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button2" />

    <Button
        android:id="@+id/button4"
        android:layout_width="81dp"
        android:layout_height="43dp"
        android:layout_marginBottom="344dp"
        android:text="Button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button3" />

    <Button
        android:id="@+id/button2"
        android:layout_width="81dp"
        android:layout_height="43dp"
        android:layout_marginBottom="344dp"
        android:text="Button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button" />

    <TextView
        android:id="@+id/textFinalidade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="148dp"
        android:fontFamily="@font/playfair_display_semibold"
        android:text="@string/app_final"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/groupFinalidade"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:singleSelection="true"
        app:layout_constraintTop_toBottomOf="@id/textFinalidade"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnOrganizar"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:text="Organizar"
            android:layout_margin="4dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnDoar"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:text="Doar"
            android:layout_margin="4dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnVender"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:text="Vender"
            android:layout_margin="4dp"/>

    </com.google.android.material.button.MaterialButtonToggleGroup>

    <LinearLayout
        android:id="@+id/rodape"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal"
        android:background="@color/VerdeClaro"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">
        <ImageView
            android:id="@+id/closet"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:padding="22dp"
            android:src="@drawable/closeticon"/>
        <ImageView
            android:id="@+id/pesquisar"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:padding="22dp"
            android:src="@drawable/search_branco" />
        <ImageView
            android:id="@+id/cadastrarRoupa"
            android:layout_width="90dp"
            android:layout_height="80dp"
            android:padding="10dp"
            android:src="@drawable/baseline_add_circle_24" />
        <ImageView
            android:id="@+id/doacao"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:padding="22dp"
            android:src="@drawable/iconedoacao" />
        <ImageView
            android:id="@+id/perfil"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:padding="22dp"
            android:src="@drawable/person_branco" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="96dp"
        android:layout_height="36dp"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="276dp"
        android:fontFamily="@font/playfair_display_semibold"
        android:text="@string/app_tamanho"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <RadioGroup
        android:id="@+id/Tamanho"
        android:layout_width="wrap_content"
        android:layout_height="38dp"
        android:layout_marginTop="464dp"
        android:background="@drawable/bg_segmented_border"
        android:orientation="horizontal"
        android:padding="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/rbPP"
            android:layout_width="53dp"
            android:layout_height="31dp"
            android:background="@drawable/b1"
            android:button="@null"
            android:checked="true"
            android:fontFamily="@font/raleway_extrabold"
            android:gravity="center"
            android:text="@string/app_pp"
            android:textColor="@color/green"
            android:textSize="16sp"
            tools:layout_editor_absoluteX="23dp"
            tools:layout_editor_absoluteY="489dp" />

        <RadioButton
            android:id="@+id/rbP"
            android:layout_width="53dp"
            android:layout_height="31dp"
            android:background="@drawable/b3"
            android:button="@null"
            android:checked="true"
            android:fontFamily="@font/raleway_extrabold"
            android:gravity="center"
            android:text="@string/app_p"
            android:textColor="@color/green"
            android:textSize="16sp"
            tools:layout_editor_absoluteX="23dp"
            tools:layout_editor_absoluteY="489dp" />

        <RadioButton
            android:id="@+id/rbM"
            android:layout_width="53dp"
            android:layout_height="31dp"
            android:background="@drawable/b3"
            android:button="@null"
            android:checked="true"
            android:fontFamily="@font/raleway_extrabold"
            android:gravity="center"
            android:text="@string/app_m"
            android:textColor="@color/green"
            android:textSize="16sp"
            tools:layout_editor_absoluteX="23dp"
            tools:layout_editor_absoluteY="489dp" />

        <RadioButton
            android:id="@+id/rbG"
            android:layout_width="53dp"
            android:layout_height="31dp"
            android:background="@drawable/b3"
            android:button="@null"
            android:checked="true"
            android:fontFamily="@font/raleway_extrabold"
            android:gravity="center"
            android:text="@string/app_g"
            android:textColor="@color/green"
            android:textSize="16sp"
            tools:layout_editor_absoluteX="23dp"
            tools:layout_editor_absoluteY="489dp" />

        <RadioButton
            android:id="@+id/rbGG"
            android:layout_width="53dp"
            android:layout_height="31dp"
            android:background="@drawable/b3"
            android:button="@null"
            android:checked="true"
            android:fontFamily="@font/raleway_extrabold"
            android:gravity="center"
            android:text="@string/app_gg"
            android:textColor="@color/green"
            android:textSize="16sp"
            tools:layout_editor_absoluteX="23dp"
            tools:layout_editor_absoluteY="489dp" />

        <RadioButton
            android:id="@+id/rbXGG"
            android:layout_width="53dp"
            android:layout_height="31dp"
            android:background="@drawable/b2"
            android:button="@null"
            android:checked="true"
            android:fontFamily="@font/raleway_extrabold"
            android:gravity="center"
            android:text="@string/app_xgg"
            android:textColor="@color/green"
            android:textSize="16sp"
            tools:layout_editor_absoluteX="23dp"
            tools:layout_editor_absoluteY="489dp" />

    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>