<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CadRoupa2Fragment">

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:backgroundTint="@android:color/transparent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_arrow_back_24"
        app:tint="@color/green" />

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_close_clear_cancel"
        app:tint="@color/green" />

    <GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:alignmentMode="alignMargins"
        android:columnCount="5"
        android:padding="8dp"
        android:rowCount="2"
        android:useDefaultMargins="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <CheckBox
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:background="@drawable/selector_categoria"
            android:button="@null"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/app_organizar"
            android:textSize="15sp" />

        <CheckBox
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:background="@drawable/selector_categoria"
            android:button="@null"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/app_doar"
            android:textSize="15sp" />

        <CheckBox
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:background="@drawable/selector_categoria"
            android:button="@null"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/app_vender"
            android:textSize="15sp" />

    </GridLayout>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="164dp"
        android:text="@string/app_final"
        android:textColor="#4A5B3A"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnCriarGaveta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="656dp"
        android:background="@drawable/botao_arredondado"
        android:fontFamily="@font/plus_jakarta_sans"
        android:gravity="center"
        android:padding="12dp"
        android:text="@string/app_novagaeta"
        android:textAllCaps="false"
        android:textColor="#2E4D2E"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSalvarAlteracoes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="724dp"
        android:background="@drawable/botao_arredondado"
        android:fontFamily="@font/plus_jakarta_sans"
        android:gravity="center"
        android:padding="12dp"
        android:text="@string/app_salvar"
        android:textAllCaps="false"
        android:textColor="#2E4D2E"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/rodape"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal"
        android:background="@color/VerdeClaro"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageView
            android:id="@+id/closet"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:padding="22dp"
            android:src="@drawable/closeticon"/>
        <ImageView
            android:id="@+id/pesquisar"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:padding="22dp"
            android:src="@drawable/search_branco" />
        <ImageView
            android:id="@+id/cadastrarRoupa"
            android:layout_width="90dp"
            android:layout_height="80dp"
            android:padding="10dp"
            android:src="@drawable/baseline_add_circle_24" />
        <ImageView
            android:id="@+id/doacao"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:padding="22dp"
            android:src="@drawable/iconedoacao" />
        <ImageView
            android:id="@+id/perfil"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:padding="22dp"
            android:src="@drawable/person_branco" />
    </LinearLayout>

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="196dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>